# Flutter-Rust-FFI

./: .gitignore  README.md  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/flutter_rust_ffi/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: ffi.dart  main.dart  stream.dart  string_ffi.dart
lib/src/ffi/concat/: string_ffi.dart
lib/src/ffi/cross_beam/: cross_beam.dart
lib/src/ffi/db/: sled.dart
lib/src/ffi/notification/: notification.dart
lib/src/ffi/stream/: provider.dart  stream.dart  thread.dart
lib/src/ffi/stream_to/: stream.dart
lib/src/ffi/sum/: sum.dart
lib/src/module/: home.dart
lib/stream/: provider.dart  thread.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml  README.md
rust/src/: cross_beam.rs  db.rs  lib.rs  notification.rs
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
