[package]
name = "rust"
version = "0.1.0"
rust-version = "1.56"
edition = "2021"
authors = ["Remon <blackshadowsoftwareltd@gmail.com>"]

[lib]
crate-type = ["cdylib", "staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29", features = ["full"] }

sled = "0.34"

# notification
notify-rust = "4.9"
